--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Haiming & Mingxia</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Haiming</title>
+    <link rel="Stylesheet" type="text/css" href="css/layout_main.css"/>
+    <script type="application/x-javascript" src="js/jquery-2.1.4.js"> </script>
+    <script type="application/x-javascript" src="js/layout_main.js"></script>
 </head>
 <body>
-<h1 >Welcome to Haiming & Mingxia's Website</h1>
+    <div id="wallpaper"></div>
+    <div id="header"></div>
+    <div id="main">
+        <div id="navigation">
+            <div class="category pic">Picture</div>
+            <div class="category blogs">Blogs</div>
+            <div class="category news">News</div>
+            <div class="category about">About</div>
+        </div>
+    </div>
+    <div id="footer">
+        <b style="background-color:inherit">
+        This website belong to Guo Haiming<br/>
+        Any problems, please conact to guo875223825@gmail.com
+        </b>
+    </div>
 </body>
 </html>
